fixed the issue of village name was too wide

--- a/dristhi-app/assets/css/custom.css
+++ b/dristhi-app/assets/css/custom.css
@@ -1187,7 +1187,7 @@ img.pnc-child-img {
 
 .client-village {
   	color: #333333 !important;
-	max-width: 140px !important;
+	max-width: 130px !important;
 }
 
 .client-age {
